# cbitstruct

./: .clang-format  .gitignore  .travis.yml  MANIFEST.in  README.md  compile_commands.json  dev-requirements.txt  pyproject.toml  setup.py
.ci/: build-linux-sdist.sh  build-manylinux-docker.sh  build-manylinux.sh  build-osx.sh  build-windows.sh  coverage.sh  deploy-osx.sh  performance.sh  test-linux.sh
.github/workflows/: build_and_publish.yml  manylinux.yml  test.yml
cbitstruct/: __init__.py  _cbitstruct.c
cbitstruct/clinic/: _cbitstruct.c.313.h  _cbitstruct.c.35.h  _cbitstruct.c.36.h  _cbitstruct.c.37.h
cbitstruct/tests/: test_against_bitstruct.py  test_api.py  test_bitstruct.py  test_cornercase.py  test_perf.py
cbitstruct/tests/original/: test_bitstruct.py
clinic/: _cbitstruct.c.35.h  _cbitstruct.c.36.h  _cbitstruct.c.37.h
tests/: test_perf.py
travis/: build-wheels.sh  deploy.sh
